--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "cross-env NODE_ENV=development webpack-serve --open",
     "build": "cross-env NODE_ENV=production webpack",
     "format": "prettier --write 'packages/**/*.js'",
-    "test": "jest --watchAll --coverage",
-    "precommit": "lint-staged"
+    "test": "jest --watchAll --coverage"
   },
   "lint-staged": {
     "*.{js,jsx,css,md}": [
